why it the processor not processing?